- convert create workflow button to image - remove the title to match wireframe

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="app-background">
       <header>
-        <h1>My Workflows</h1>
+        <!-- <h1>My Workflows</h1> -->
         <div class="actions">
           <button id="settingsBtn" class="btn icon-btn" title="Settings">
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -17,13 +17,18 @@
               />
             </svg>
           </button>
-          <button id="createBtn" class="btn primary">+ Create Workflow</button>
+          <!-- <button id="createBtn" class="btn primary">+ Create Workflow</button> -->
         </div>
       </header>
 
       <main id="workflowContainer" class="card-grid">
         <!-- Cards will be injected here -->
       </main>
+      <button id="createBtn" class="fab" title="Create New Workflow">
+        <svg width="32" height="32" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+        </svg>
+      </button>
     </div>
     <script src="renderer.js"></script>
   </body>
