- revert to include title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="app-background">
       <header>
-        <!-- <h1>My Workflows</h1> -->
+        <h1>My Workflows</h1>
         <div class="actions">
           <button id="settingsBtn" class="btn icon-btn" title="Settings">
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
